Lots of Sonar-inspired cleanup.